# nl2sql

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  security.py
benchmarks/: __init__.py  download_spider.py  run_benchmark.py  spider_benchmark.py
benchmarks/core/: __init__.py  data_loader.py  normalizer.py  results.py
benchmarks/evaluators/: __init__.py  exact_match.py  execution.py  llm_judge.py
pipeline/: __init__.py  answer_generator.py  core.py  reasoning.py  schema_processor.py  sql_generator.py  verifier.py
public/: styles.css
templates/: index.html
tests/: test_security.py
utils/: hf_client.py  openai_client.py
